Fix header z-index

--- a/renderer/components/header.css
+++ b/renderer/components/header.css
@@ -1,7 +1,7 @@
 .base {
 	display: flex;
 	position: fixed;
-	z-index: 100;
+	z-index: 300;
 	top: 0;
 	left: 0;
 	right: 0;
